--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
+    "sharp": "^0.29.3",
     "validator": "^13.7.0"
   }
 }
