--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +16,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "sharp": "^0.29.3",
+    "socket.io": "^4.4.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
